@@ -39,16 +39,17 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import javax.inject.Inject;
-import javax.servlet.http.HttpServletRequest;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import jakarta.inject.Inject;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+
+import jakarta.servlet.http.HttpServletRequest;
 import org.jboss.logging.Logger;
 
 import static io.quarkus.scheduler.Scheduled.ConcurrentExecution.SKIP;
@@ -135,8 +136,8 @@ public class NewsCourrielNotificationService extends AbstractFisholaResource {
             // Set next check according to configuration
             dao.scheduleNestNotificationCheck(config.newsMailSendingDelayHours());
             // Notify user by mail about all public news that have not been notified yet
-            List<News> publicNewsThatHaveNotBeenNotifiedByMail = dao.getNews(true).stream().filter(news -> news.getDateNotificationSent() == null).toList();
-            if (publicNewsThatHaveNotBeenNotifiedByMail.size() > 0) {
+            List<News> publicNewsThatHaveNotBeenNotifiedByMail = dao.getNews(true).stream().filter(news -> news.getDateNotificationSent() == null).collect(Collectors.toList());
+            if (!publicNewsThatHaveNotBeenNotifiedByMail.isEmpty()) {
                 log.info(publicNewsThatHaveNotBeenNotifiedByMail.size() + " News became public since last check, notify users by courriel");
             } else {
                 log.info("No News became public since last check.");
@@ -148,22 +149,22 @@ public class NewsCourrielNotificationService extends AbstractFisholaResource {
 
 
     protected void notifyUsersByCourrielAboutNews(List<News> newsToNotifyByMail) {
-        if( newsToNotifyByMail.size() > 0) {
+        if(!newsToNotifyByMail.isEmpty()) {
             LocalDateTime now = LocalDateTime.now();
-            String htmlContent = "";
+            StringBuilder htmlContent = new StringBuilder();
             String subject = "Fishola - " + newsToNotifyByMail.get(0).getName();
             if (newsToNotifyByMail.size() > 1) {
                 subject += " et autres actualités";
             }
             for (News news : newsToNotifyByMail) {
                 if (newsToNotifyByMail.size() > 1) {
-                    htmlContent += "<h1>" + news.getName() + "</h1>";
+                    htmlContent.append("<h1>").append(news.getName()).append("</h1>");
                 }
-                htmlContent += news.getContent();
+                htmlContent.append(news.getContent());
                 news.setDateNotificationSent(now);
                 dao.update(news);
             }
-            htmlContent +=" <br/>Retrouvez toutes les actualités de Fishola sur notre <a href=\"https://fishola.fr/\"> site internet </a>.";
+            htmlContent.append(" <br/>Retrouvez toutes les actualités de Fishola sur notre <a href=\"https://fishola.fr/\"> site internet </a>.");
 
             for (FisholaUser user : usersDao.findAllUsersAllowingCourriel()) {
                 String baseURL = "https://fishola.fr";
